@@ -1,3 +1,10 @@
+2008-06-19  Robert Millan  <rmh@aybabtu.com>
+
+	* util/update-grub_lib.in (prepare_grub_to_access_device): Issue
+	"insmod" command directly when abstraction modules are needed,
+	instead of reliing on GRUB_PRELOAD_MODULES (which had no effect
+	since it had already been processed).
+
 2008-06-19  Pavel Roskin  <proski@gnu.org>
 
 	* conf/i386-efi.rmk: Recompile grub-mkimage.c if Makefile has
